# Nuen-rs

./: Cargo.toml  README.md
.cargo/: config.toml
src/: io.rs  main.rs
src/cmd/: mod.rs
src/display/: mod.rs
src/logger/: defmt.rs  mod.rs
src/state_machine/: mod.rs
src/tasks/: bms_handler.rs  can_rx.rs  can_tx.rs  cmd.rs  mod.rs  motor_handler.rs  obc_handler.rs  simulink.rs
src/tasks/can_rx/: mod.rs
src/tasks/can_tx/: mod.rs
src/tasks/simulink/: mod.rs
