[package]
name = "Nuen-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
# Change stm32f412rg to your chip name, if necessary.
embassy-stm32 = { version = "0.1.0", features = [
    "defmt",
    "stm32f412rg",
    "unstable-pac",
    "memory-x",
    "time-driver-tim3",
    "exti",
    "chrono",
] }
embassy-sync = { version = "0.6.0", features = [ "defmt" ] }
embassy-executor = { version = "0.6.0", features = [
    "task-arena-size-32768",
    "arch-cortex-m",
    "executor-thread",
    "executor-interrupt",
    "defmt",
    "integrated-timers",
] }
embassy-time = { version = "0.3.2", features = [
    "defmt",
    "defmt-timestamp-uptime",
    "tick-hz-32_768",
] }

embassy-futures = "0.1.0"
defmt = "0.3"
defmt-rtt = "0.4"
cortex-m = { version = "0.7.7", features = [
    "inline-asm",
    "critical-section-single-core",
] }
cortex-m-rt = "0.7.3"
embedded-hal = "1.0.0"
embedded-hal-bus = { version = "0.2", features = ["async"] }
embedded-io = { version = "0.6.1" }
embedded-io-async = { version = "0.6.1" }
panic-probe = { version = "0.3", features = ["print-defmt"] }
futures-util = { version = "0.3.30", default-features = false }
heapless = { version = "0.8", default-features = false }
nb = "1.1.0"
embedded-storage = "0.3.1"
micromath = "2.1.0"
usbd-hid = "0.8.2"
static_cell = "2"
chrono = { version = "^0.4", default-features = false }

[patch.crates-io]
embassy-stm32 = { git = "https://github.com/embassy-rs/embassy.git", rev = "c84495ef2eb99580fea5392b2b3aff5ad66043a0"}
embassy-sync= { git = "https://github.com/embassy-rs/embassy.git", rev = "c84495ef2eb99580fea5392b2b3aff5ad66043a0"}
embassy-executor = { git = "https://github.com/embassy-rs/embassy.git", rev = "c84495ef2eb99580fea5392b2b3aff5ad66043a0"}
embassy-time  = { git = "https://github.com/embassy-rs/embassy.git", rev = "c84495ef2eb99580fea5392b2b3aff5ad66043a0"}
embassy-futures = { git = "https://github.com/embassy-rs/embassy.git", rev = "c84495ef2eb99580fea5392b2b3aff5ad66043a0"}

[profile.release]
debug = 2